<resources>
    <!--common-->
    <string name="app_name">SIU</string>
    <string name="network_unavailable">网络不给力</string>
    <string name="crash_warning">很抱歉，程序出现异常，即将退出</string>
    <string name="load_no_more">暂无更多</string>
    <string name="load_more">正在加载更多...</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <!-- tab Strings-->
    <string name="mainpage_tab_schedule">日程</string>
    <string name="mainpage_tab_group">群组</string>
    <string name="mainpage_tab_discovery">发现</string>
    <string name="mainpage_tab_account">帐号</string>


    <!-- 登录页面 LoginActivity la-->
    <string name="la_login">登录</string>
    <string name="la_hint_acc">帐号</string>
    <string name="la_hint_psw">密码</string>
    <string name="la_acc_psw_wrong">帐号或者密码错误</string>
    <string name="la_time_out">登录超时</string>
    <string name="la_acc_psw_empty">帐号或密码不能为空</string>
    <string name="la_register">注册</string>
    <string name="la_title">帐号注册</string>
    <!--ScheduleFragment sf-->
    <string name="sf_calendar_classification">日程分类</string>
    <string name="sf_calendar_title">名&#160;&#160;&#160;&#160;称:&#160;</string>
    <string name="sf_calendar_date">日&#160;&#160;&#160;&#160;期:&#160;</string>
    <string name="sf_calendar_time">时&#160;&#160;&#160;&#160;间:&#160;</string>
    <string name="sf_calendar_location">地&#160;&#160;&#160;&#160;点:&#160;</string>
    <string name="sf_calendar_attender">参与人:&#160;</string>
    <string name="sf_calendar_time_format">%1$s&#160;-&#160;%2$s</string>
    <!--UserPageFragment upf-->
    <string name="upf_follower">粉丝</string>
    <string name="upf_followee">关注</string>
    <string name="upf_calendar_collect">日程收藏</string>
    <string name="upf_message">消息</string>
    <string name="upf_setting">设置</string>
    <string name="upf_hint_upload_error">头像上传失败</string>
    <!-- FollowActivity fa-->
    <string name="fa_follower">@string/upf_follower</string>
    <string name="fa_followee">@string/upf_followee</string>


    <!-- QueryUserActivity -->
    <string name="qua_no_result">赞无结果！</string>
    <string name="qua_input_user">请输入用户帐号或者昵称</string>
    <string name="qua_search">搜索:</string>

    <!-- QueryResultActivity qra -->
    <string name="qra_title">搜索结果</string>
    <!-- RegisterActivity -->
    <string name="ra_title">注册</string>
    <string name="ra_nickname">昵称(1~9个字符)</string>
    <string name="ra_account">帐号(至少六个字符,不包含空格)</string>
    <string name="ra_password">密码(至少六个字符,不包含空格)</string>
    <string name="ra_password_confirm">再次确认密码</string>
    <string name="ra_confirm">确定</string>
    <string name="ra_account_empty">帐号不能为空</string>
    <string name="ra_password_empty">密码不能为空</string>
    <string name="ra_nickname_empty">昵称不能为空</string>
    <string name="ra_password_not_same">密码不一致</string>
    <string name="ra_welcome">欢迎来到OhShock, 请先注册一个属于你的帐号吧。</string>
    <string name="ra_more_info">为了找到更适合您的日程,您可以进一步完善您的资料。</string>
    <string name="ra_gender">您的性别是:</string>
    <string name="ra_necessity">*</string>
    <string name="ra_necessity_hint">为必填项</string>
    <!-- ImageActivity ia-->
    <string name="ia_title">图片选择</string>


    <!-- UserDataActivity -->
    <string name="uda_follow">关注</string>
    <string name="uda_unfollow">取消关注</string>
    <string name="uda_title">详细资料</string>

    <string name="uda_chat">发送消息</string>
    <!-- DiscoveryFragment df -->
    <string name="df_news">关注动态</string>
    <string name="df_hot_plans">热门计划</string>
    <string name="df_city_users">同城用户</string>
    <string name="df_city_plans">同城计划</string>
    <string name="df_user_board">红人榜</string>

    <!-- NewsActivity na -->
    <string name="na_title">动态</string>
    <string name="na_tab_action">动态</string>
    <string name="na_tab_calendar">日程</string>
    <string name="na_hint_error">网络错误</string>

    <!-- PublishActivity pa -->
    <string name="pa_et_hint">请输入要发布的内容</string>
    <string name="pa_publish">发送</string>
    <string name="pa_net_error">网络错误</string>
    <!-- PickImageActivity pia -->
    <!-- 默认Title -->
    <string name="pia_title">全部图片</string>
    <string name="pia_count_format">已选择（%1$d/%2$d）</string>

    <!-- NewCalendarActivity nca -->
    <string name="nca_title">新建日程</string>
    <string name="nca_calendar_confirm">保存日程</string>
    <string name="nca_event_title_hint">日程名称</string>
    <string name="nca_event_title_remark">备注</string>
    <string name="nca_time_all_day">全天</string>
    <string name="nca_add_location">添加地点</string>
    <string name="nca_more_options">更多选项</string>
    <string name="nca_picker_sd">开始日期</string>
    <string name="nca_picker_ed">结束日期</string>
    <string name="nca_picker_st">开始时间</string>
    <string name="nca_picker_et">结束时间</string>
    <string name="nca_time_format">%1$d:%2$d</string>
    <string name="nca_date_format">%1$d/%2$d/%3$d%4$s</string>
    <string name="nca_toast_title">请输入日程名称</string>


    <!-- MyUserDataActivity muda -->
    <string name="muda_title">个人信息</string>
    <string name="muda_avatar">头像</string>
    <string name="muda_nickname">昵称</string>
    <string name="muda_username">帐号</string>
    <string name="muda_gender">性别</string>
    <string name="muda_enter_nick_name">请输入昵称</string>
    <string name="muda_hint_name_error">昵称修改失败</string>


    <!-- InviteAttenderActivity iaa -->
    <string name="iaa_title">邀请</string>
</resources>
